// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hepsiburada internal order snapshot full 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adr 1",
          "addressLine1": "Adr 1",
          "addressLine2": "Kadikoy",
          "city": "Istanbul",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "Ahmet",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "Yilmaz",
          "phone": "555",
          "postalCode": "34000",
          "state": "Kadikoy",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Fatura",
          "addressLine1": "Fatura",
          "addressLine2": "",
          "city": "Istanbul",
          "companyName": "ACME",
          "countryCode": "TR",
          "email": "",
          "firstName": "Ahmet",
          "isCorporate": true,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "Yilmaz",
          "phone": "",
          "postalCode": "",
          "state": "Istanbul",
          "taxNumber": "123",
          "taxOffice": "VD",
          "title": "Fatura Adresi",
        },
      ],
      "email": "a@mock.com",
      "externalIdentities": [
        {
          "externalCustomerId": "C1",
          "integrationCode": "hepsiburada",
        },
      ],
      "firstName": "Ahmet",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "Yilmaz",
      "phone": "555",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Fatura",
        "addressLine2": "",
        "city": "Istanbul",
        "companyName": "ACME",
        "countryCode": "TR",
        "email": "",
        "firstName": "Ahmet",
        "isCorporate": true,
        "lastName": "Yilmaz",
        "phone": "",
        "postalCode": "",
        "state": "Istanbul",
        "taxNumber": "123",
        "taxOffice": "VD",
      },
      "customerFirstName": "Ahmet",
      "customerLastName": "Yilmaz",
      "dates": {
        "deliveredDate": 2026-01-12T08:00:00.000Z,
        "orderDate": 2026-01-10T08:00:00.000Z,
        "shippedDate": 2026-01-11T08:00:00.000Z,
      },
      "externalOrderId": "HB-1001",
      "externalStatus": "shipped",
      "financials": {
        "currencyCode": "USD",
        "grandTotal": 250.5,
        "shippingFee": 0,
        "subTotal": 250.5,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "carrierName": "Aras",
          "shipmentMethod": "MARKETPLACE",
          "status": "SUCCESS",
          "trackingCode": "BC1",
        },
      ],
      "integrationCode": "hepsiburada",
      "internalStatus": "SHIPPED",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "hepsiburada",
        "status": "PENDING",
      },
      "items": [
        {
          "barcode": "B1",
          "externalItemId": "P1",
          "externalLineItemId": "L1",
          "itemStatus": "CANCELLED",
          "productName": "Urun",
          "quantity": 2,
          "sku": "S1",
          "taxRate": 18,
          "totalPrice": 200,
          "unitPrice": 100,
        },
        {
          "barcode": "X",
          "externalItemId": "X",
          "externalLineItemId": "X",
          "itemStatus": "ACTIVE",
          "productName": "İsimsiz Ürün",
          "quantity": 1,
          "sku": "X",
          "taxRate": 0,
          "totalPrice": 0,
          "unitPrice": 0,
        },
      ],
      "meta": {
        "barcode": "BC1",
        "billingAddress": {
          "address": "Fatura",
          "city": "Istanbul",
          "companyName": "ACME",
          "name": "Ahmet",
          "taxNumber": "123",
          "taxOffice": "VD",
        },
        "cargoCompany": "Aras",
        "customerEmail": "a@mock.com",
        "customerId": "C1",
        "customerName": "Ahmet Yilmaz",
        "deliveredDate": "2026-01-12T08:00:00.000Z",
        "lineItems": [
          {
            "barcode": "B1",
            "id": "L1",
            "merchantSku": "S1",
            "price": {
              "amount": 100,
            },
            "productName": "Urun",
            "quantity": 2,
            "sku": "P1",
            "status": "CancelledByMerchant",
            "totalPrice": {
              "amount": 200,
            },
            "vatRate": 18,
          },
          {
            "sku": "X",
          },
        ],
        "orderDate": "2026-01-10T08:00:00.000Z",
        "orderNumber": "HB-1001",
        "shippedDate": "2026-01-11T08:00:00.000Z",
        "shippingAddress": {
          "address": "Adr 1",
          "city": "Istanbul",
          "district": "Kadikoy",
          "name": "Ahmet",
          "phoneNumber": "555",
          "postalCode": "34000",
          "surname": "Yilmaz",
          "town": "Kadikoy",
        },
        "status": "shipped",
        "totalPrice": {
          "amount": 250.5,
          "currency": "USD",
        },
      },
      "orderNumber": "HB-1001",
      "shippingAddress": {
        "addressLine1": "Adr 1",
        "addressLine2": "Kadikoy",
        "city": "Istanbul",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "Ahmet",
        "isCorporate": false,
        "lastName": "Yilmaz",
        "phone": "555",
        "postalCode": "34000",
        "state": "Kadikoy",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Hepsiburada internal order snapshot minimal 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "Belirtilmedi",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "Belirtilmedi",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "Belirtilmedi",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "Belirtilmedi",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "HB-GUEST-",
          "integrationCode": "hepsiburada",
        },
      ],
      "firstName": "MUSTERI",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "Belirtilmedi",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "Belirtilmedi",
        "taxNumber": "",
        "taxOffice": "",
      },
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "deliveredDate": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "",
      "externalStatus": "Open",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [],
      "integrationCode": "hepsiburada",
      "internalStatus": "AWAITING_APPROVAL",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "hepsiburada",
        "status": "PENDING",
      },
      "items": [],
      "meta": {},
      "orderNumber": "",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "Belirtilmedi",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "Belirtilmedi",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Hepsiburada internal order snapshot orderId-no-billing 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "C",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "C",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "C",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "C",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "HB-GUEST-9",
          "integrationCode": "hepsiburada",
        },
      ],
      "firstName": "MUSTERI",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "C",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "C",
        "taxNumber": "",
        "taxOffice": "",
      },
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "deliveredDate": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "9",
      "externalStatus": "weird",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [],
      "integrationCode": "hepsiburada",
      "internalStatus": "AWAITING_APPROVAL",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "hepsiburada",
        "status": "PENDING",
      },
      "items": [],
      "meta": {
        "orderId": 9,
        "shippingAddress": {
          "city": "C",
        },
        "status": "weird",
      },
      "orderNumber": "9",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "C",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "C",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;
